--- a/osstp/templates/about_us.jinja2
+++ b/osstp/templates/about_us.jinja2
@@ -1,9 +1,9 @@
 {% extends 'base.jinja2' %}
 
-{% block login_stats %} class="active"{% endblock login_stats %}
+{% block about_us_stats %} class="active"{% endblock about_us_stats %}
 
 {% block content %}
   <div class="container-fluid">
-    login
+    about us
   </div><!-- container -->
 {% endblock content %}
