將 osstp 更名為 fosstp

--- a/fosstp/templates/base.jinja2
+++ b/fosstp/templates/base.jinja2
@@ -7,7 +7,7 @@
   <meta name="description" content="臺北市數位學習資源網">
   <meta name="author" content="臺北市數位學習資源網網站維護組">
   <title>臺北市數位學習資源網</title>
-  <link href="{{ 'osstp:static/css/bootstrap.min.css'|static_path }}" rel="stylesheet">
+  <link href="{{ 'fosstp:static/css/bootstrap.min.css'|static_path }}" rel="stylesheet">
 </head>
 <body>
   <div class="navbar navbar-default">
@@ -41,7 +41,7 @@
     <p class="text-center">版權所有 &copy; 2015 臺北市自由軟體數位學習資源網</p>
   </footer>
 
-  <script src="{{ 'osstp:static/js/jquery.min.js'|static_path }}"></script>
-  <script src="{{ 'osstp:static/js/bootstrap.min.js'|static_path }}"></script>
+  <script src="{{ 'fosstp:static/js/jquery.min.js'|static_path }}"></script>
+  <script src="{{ 'fosstp:static/js/bootstrap.min.js'|static_path }}"></script>
 </body>
 </html>
