--- a/fosstp/templates/base.jinja2
+++ b/fosstp/templates/base.jinja2
@@ -4,8 +4,8 @@
   <meta charset="utf8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="臺北市數位學習資源網">
-  <meta name="author" content="臺北市數位學習資源網網站維護組">
+  <meta name="description" content="臺北市自由軟體數位學習資源網">
+  <meta name="author" content="臺北市自由軟體數位學習資源網網站維護組">
   <title>臺北市數位學習資源網</title>
   <link href="{{ 'fosstp:static/css/bootstrap.min.css'|static_path }}" rel="stylesheet">
 </head>
@@ -13,7 +13,7 @@
   <div class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a href="{{ 'home'|route_path }}" class="navbar-brand">臺北市數位學習資源網</a>
+        <a href="{{ 'home'|route_path }}" class="navbar-brand">臺北市自由軟體數位學習資源網</a>
         <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -38,7 +38,7 @@
   <hr>
 
   <footer class="footer">
-    <p class="text-center">版權所有 &copy; 2015 臺北市自由軟體數位學習資源網</p>
+    <p class="text-center">版權所有 &copy; 2015 臺北市政府教育局</p>
   </footer>
 
   <script src="{{ 'fosstp:static/js/jquery.min.js'|static_path }}"></script>
