調整網站架構連結

--- a/fosstp/templates/about_this_site.jinja2
+++ b/fosstp/templates/about_this_site.jinja2
@@ -1,9 +1,9 @@
 {% extends 'base.jinja2' %}
 
-{% block login_stats %} class="active"{% endblock login_stats %}
+{% block about_this_site_stats %} class="active"{% endblock %}
 
 {% block content %}
   <div class="container-fluid">
-    登入
+    關於本站
   </div><!-- container -->
 {% endblock content %}
