--- a/fosstp/templates/log.jinja2
+++ b/fosstp/templates/log.jinja2
@@ -1,9 +1,7 @@
 {% extends 'base.jinja2' %}
 
-{% block login_stats %} class="active"{% endblock login_stats %}
-
 {% block content %}
   <div class="container-fluid">
-    登入
+    討論紀錄
   </div><!-- container -->
 {% endblock content %}
