--- a/fosstp/templates/news.jinja2
+++ b/fosstp/templates/news.jinja2
@@ -1,9 +1,9 @@
 {% extends 'base.jinja2' %}
 
-{% block about_us_stats %} class="active"{% endblock about_us_stats %}
+{% block news_stats %} class="active"{% endblock %}
 
 {% block content %}
   <div class="container-fluid">
-    about us
+    最新消息
   </div><!-- container -->
 {% endblock content %}
