--- a/fosstp/templates/planet.jinja2
+++ b/fosstp/templates/planet.jinja2
@@ -1,9 +1,9 @@
 {% extends 'base.jinja2' %}
 
-{% block login_stats %} class="active"{% endblock login_stats %}
+{% block planet_stats %} class="active"{% endblock %}
 
 {% block content %}
   <div class="container-fluid">
-    登入
+    聯播星球
   </div><!-- container -->
 {% endblock content %}
