--- a/fosstp/templates/base.jinja2
+++ b/fosstp/templates/base.jinja2
@@ -9,6 +9,25 @@
   <title>臺北市自由軟體數位學習資源網</title>
   <link href="{{ 'fosstp:static/css/bootstrap.min.css'|static_path }}" rel="stylesheet">
   <link href="{{ 'fosstp:static/css/font-awesome.min.css'|static_path }}" rel="stylesheet">
+
+  <!-- favicons -->
+  <link rel="apple-touch-icon" sizes="57x57" href="{{ 'fosstp:static/images/favicons/apple-icon-57x57.png'|static_path }}">
+  <link rel="apple-touch-icon" sizes="60x60" href="{{ 'fosstp:static/images/favicons/apple-icon-60x60.png'|static_path }}">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ 'fosstp:static/images/favicons/apple-icon-72x72.png'|static_path }}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ 'fosstp:static/images/favicons/apple-icon-76x76.png'|static_path }}">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ 'fosstp:static/images/favicons/apple-icon-114x114.png'|static_path }}">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ 'fosstp:static/images/favicons/apple-icon-120x120.png'|static_path }}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ 'fosstp:static/images/favicons/apple-icon-144x144.png'|static_path }}">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ 'fosstp:static/images/favicons/apple-icon-152x152.png'|static_path }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ 'fosstp:static/images/favicons/apple-icon-180x180.png'|static_path }}">
+  <link rel="icon" type="image/png" sizes="192x192"  href="{{ 'fosstp:static/images/favicons/android-icon-192x192.png'|static_path }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ 'fosstp:static/images/favicons/favicon-32x32.png'|static_path }}">
+  <link rel="icon" type="image/png" sizes="96x96" href="{{ 'fosstp:static/images/favicons/favicon-96x96.png'|static_path }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ 'fosstp:static/images/favicons/favicon-16x16.png'|static_path }}">
+  <link rel="manifest" href="{{ 'fosstp:static/images/favicons/manifest.json'|static_path }}">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="{{ 'fosstp:static/images/favicons/ms-icon-144x144.png'|static_path }}">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <div class="navbar navbar-default">
