--- a/fosstp/templates/news.jinja2
+++ b/fosstp/templates/news.jinja2
@@ -17,7 +17,7 @@
 <!-- container -->
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
+    <div class="col-sm-9 col-sm-push-3 col-lg-9 col-lg-push-2">
       <div class="panel panel-primary">
         <div class="panel-heading">
           <h3 class="panel-title">最新消息</h3>
@@ -51,72 +51,200 @@
                 <td>2016-01-01 00:00</td>
               </tr>
               <tr>
-                <td>4</td>
+                <td>5</td>
                 <td>測試標題</td>
                 <td>2016-01-01 00:00</td>
               </tr>
               <tr>
-                <td>4</td>
+                <td>6</td>
                 <td>測試標題</td>
                 <td>2016-01-01 00:00</td>
               </tr>
               <tr>
-                <td>4</td>
+                <td>7</td>
                 <td>測試標題</td>
                 <td>2016-01-01 00:00</td>
               </tr>
               <tr>
-                <td>4</td>
+                <td>8</td>
                 <td>測試標題</td>
                 <td>2016-01-01 00:00</td>
               </tr>
               <tr>
-                <td>4</td>
+                <td>9</td>
                 <td>測試標題</td>
                 <td>2016-01-01 00:00</td>
               </tr>
               <tr>
-                <td>4</td>
-                <td>測試標題</td>
-                <td>2016-01-01 00:00</td>
-              </tr>
-              <tr>
-                <td>4</td>
-                <td>測試標題</td>
-                <td>2016-01-01 00:00</td>
-              </tr>
-              <tr>
-                <td>4</td>
-                <td>測試標題</td>
-                <td>2016-01-01 00:00</td>
-              </tr>
-              <tr>
-                <td>4</td>
-                <td>測試標題</td>
-                <td>2016-01-01 00:00</td>
-              </tr>
-              <tr>
-                <td>4</td>
+                <td>10</td>
                 <td>測試標題</td>
                 <td>2016-01-01 00:00</td>
               </tr>
             </tbody>
           </table>
-          <a href="#" class="btn btn-info pull-right">顯示更多...</a>
+          <a href="#" class="btn btn-info btn-xs pull-right">顯示更多...</a>
         </div>
       </div>
-      <ul class="pager">
-          <li><a href="#"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> 上一頁</a></li>
-          <li><a href="#">下一頁  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a></li>
-      </ul>
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">研習資訊</h3>
+        </div>
+        <div class="panel-body">
+          <table class="table table-striped">
+            <thead>
+              <th>序號</th>
+              <th>標題</th>
+              <th>時間</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+              </tr>
+              <tr>
+                <td>7</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+              </tr>
+              <tr>
+                <td>8</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+              </tr>
+              <tr>
+                <td>10</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+              </tr>
+            </tbody>
+          </table>
+          <a href="#" class="btn btn-info btn-xs pull-right">顯示更多...</a>
+        </div>
+      </div>
+      <div class="panel panel-primary">
+        <div class="panel-heading">
+          <h3 class="panel-title">最新討論</h3>
+        </div>
+        <div class="panel-body">
+          <table class="table table-striped">
+            <thead>
+              <th>序號</th>
+              <th>標題</th>
+              <th>時間</th>
+              <th>作者</th>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+                <td>王大毛</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+                <td>王大毛</td>
+              </tr>
+              <tr>
+                <td>3</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+                <td>王大毛</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+                <td>王大毛</td>
+              </tr>
+              <tr>
+                <td>5</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+                <td>王大毛</td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+                <td>王大毛</td>
+              </tr>
+              <tr>
+                <td>7</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+                <td>王大毛</td>
+              </tr>
+              <tr>
+                <td>8</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+                <td>王大毛</td>
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+                <td>王大毛</td>
+              </tr>
+              <tr>
+                <td>10</td>
+                <td>測試標題</td>
+                <td>2016-01-01 00:00</td>
+                <td>王大毛</td>
+              </tr>
+            </tbody>
+          </table>
+          <a href="#" class="btn btn-info btn-xs pull-right">顯示更多...</a>
+        </div>
+      </div>
     </div>
-    <div class="col-sm-3 col-sm-pull-9 col-lg-2 col-lg-pull-8">
-      <a class="twitter-timeline" data-height="500" href="https://twitter.com/fosstp">Tweets by fosstp</a>
-      <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <div class="col-sm-3 col-sm-pull-9 col-lg-2 col-lg-pull-9">
+      <div class="row">
+        <div class="col-xs-12">
+          <a class="twitter-timeline" data-height="500" href="https://twitter.com/fosstp">Tweets by fosstp</a>
+          <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+        <div class="col-xs-12">
+          <div class="fb-page" data-href="https://www.facebook.com/fosstp/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/fosstp/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/fosstp/">臺北市自由軟體推動小組</a></blockquote></div>
+        </div>
+      </div>
     </div>
     <div class="clearfix visible-sm-block visible-md-block"></div>
-    <div class="col-sm-3 col-lg-2">
-      <div class="fb-page" data-href="https://www.facebook.com/fosstp/" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><blockquote cite="https://www.facebook.com/fosstp/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/fosstp/">臺北市自由軟體推動小組</a></blockquote></div>
+    <div class="col-sm-3 col-lg-1">
+      友站連結
     </div>
   </div><!-- row -->
 </div><!-- container -->
