完成登入登出功能

--- a/fosstp/templates/base.jinja2
+++ b/fosstp/templates/base.jinja2
@@ -42,7 +42,7 @@
               <a href="{{ 'forum'|route_path }}"><span class="glyphicon glyphicon-comment" aria-hidden="true"></span> 討論區</a>
           </li>
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">資源分享 <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-share" aria-hidden="true"></span>資源分享 <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li{% block download_stats %}{% endblock %}>
                   <a href="{{ 'download'|route_path }}"><span class="glyphicon glyphicon-download" aria-hidden="true"></span> 檔案下載</a>
@@ -55,7 +55,21 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <li{% block login_stats %}{% endblock %}><a href="{{ 'login'|route_path }}"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> 登入</a></li>
+          {% if request.user %}
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ request.user }} <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> 帳號設定</a>
+                </li>
+                <li>
+                  <a href="{{ 'logout'|route_path }}"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> 登出</a>
+                </li>
+              </ul>
+            </li>
+          {% else %}
+            <li{% block login_stats %}{% endblock %}><a href="{{ 'login'|route_path }}"><span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> 登入</a></li>
+          {% endif %}
         </ul>
       </div>
     </div>
