--- a/fosstp/templates/download.jinja2
+++ b/fosstp/templates/download.jinja2
@@ -1,5 +1,7 @@
 {% extends 'base.jinja2' %}
 
+{% block share_stats %} active{% endblock share_stats %}
+
 {% block content %}
   <div class="container-fluid">
     檔案下載
