--- a/fosstp/templates/workshop.jinja2
+++ b/fosstp/templates/workshop.jinja2
@@ -4,6 +4,8 @@
 
 {% block content %}
   <div class="container-fluid">
-    研習資訊
+    <div class="row">
+        <iframe src="https://calendar.google.com/calendar/embed?src=foss.tp.edu.tw_c8r3e9k3ofc3sqfe4kii4b0sfc%40group.calendar.google.com&ctz=Asia/Taipei" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+    </div>
   </div><!-- container -->
 {% endblock content %}
