--- a/fosstp/templates/login.jinja2
+++ b/fosstp/templates/login.jinja2
@@ -46,7 +46,7 @@
           </div>
         </div>
         <div class="col-xs-12 text-center">
-          <button type="submit" class="btn btn-default">登入</button>
+          <button type="submit" class="btn btn-primary">登入</button>
         </div>
       </form>
     </div>
