--- a/fosstp/templates/settings.jinja2
+++ b/fosstp/templates/settings.jinja2
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="col-xs-12 text-center">
-          <button type="submit" class="btn btn-default">更新</button>
+          <button type="submit" class="btn btn-primary">更新</button>
         </div>
       </form>
     </div>
