--- a/fosstp/templates/signup.jinja2
+++ b/fosstp/templates/signup.jinja2
@@ -67,7 +67,7 @@
           </div>
         </div>
         <div class="col-xs-12 text-center">
-          <button type="submit" class="btn btn-default">註冊</button>
+          <button type="submit" class="btn btn-primary">註冊</button>
         </div>
       </form>
     </div>
