--- a/fosstp/templates/workshop.jinja2
+++ b/fosstp/templates/workshop.jinja2
@@ -5,7 +5,16 @@
 {% block content %}
   <div class="container-fluid">
     <div class="row">
-        <iframe src="https://calendar.google.com/calendar/embed?src=foss.tp.edu.tw_c8r3e9k3ofc3sqfe4kii4b0sfc%40group.calendar.google.com&ctz=Asia/Taipei" style="border: 0" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+      {% if workshop %}
+        {{ workshop.link|safe }}
+      {% endif %}
     </div>
+    {% if request.group == 'admin' %}
+      <div class="row">
+        <div class="col-sm-12 text-center">
+          <a class="btn btn-primary" href="{{ request.route_path('workshop_edit') }}">編輯</a>
+        </div>
+      </div>
+    {% endif %}
   </div><!-- container -->
 {% endblock content %}
