--- a/fosstp/templates/about.jinja2
+++ b/fosstp/templates/about.jinja2
@@ -5,9 +5,11 @@
 {% block content %}
   <div class="container-fluid">
     <div class="row">
-      {% if about %}
-        {{ about.content|safe }}
-      {% endif %}
+      <div class="col-sm-offset-1 col-sm-10">
+        {% if about %}
+          {{ about.content|safe }}
+        {% endif %}
+      </div>
     </div>
     {% if request.group == 'admin' %}
       <div class="row">
