完成新增討論文章功能

--- a/fosstp/templates/forum_category.jinja2
+++ b/fosstp/templates/forum_category.jinja2
@@ -22,7 +22,7 @@
         </div>
       </div>
       <div class="col-sm-offset-1 col-sm-10 text-center">
-        <a class="btn btn-primary" href="#">新增討論主題</a>
+        <a class="btn btn-primary" href="{{ request.route_path('forum_topic_add', id=forum_category.id) }}">新增討論主題</a>
       </div>
     </div>
   </div><!-- container -->
